--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,6 @@
 }
 
 .container div {
-    padding: 15px;
-    font-size: 32px;
     font-family: Helvetica;
     font-weight: bold;
     color: white;
@@ -27,19 +25,28 @@
     grid-column: 1 / 2;
     grid-row: 1 / 4;
     display: grid;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: 75px 1fr;
+}
+
+.sidebar div{
+    padding: 15px;
+}
+
+.dashboard-text{
+    font-size: 36px;
 }
 
 .sidebar-header{
-   grid-row: 1 / 2;
-   display: flex;
-   align-items: center;
-   justify-content: start;
-   gap: 15px;
+    grid-row: 1 / 2;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 10px;
+    font-size: 14px;
 }
 
 .sidebar-header > i{
-    padding-right: 10px;
+    font-size: 36px;
 }
 
 .list-items{
@@ -61,12 +68,16 @@ li{
     display: flex;
     justify-content: start;
     align-items: center;
-    gap: 15px;
+    gap: 10px;
 
 }
 
 li > i{
-    padding-right: 10px;
+    font-size: 20px;
+}
+
+li div {
+    font-size: 18px;
 }
 
 .content{
