--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
 }
 
 .sidebar{
-    background-color: blue;
+    background-color: #0284c7;
     grid-column: 1 / 2;
     grid-row: 1 / 4;
     display: grid;
