--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,41 @@
 .header{
     background-color: #393f4d;
     grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    gap: 10px;
+}
+
+.top-header{
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: space-between;
+}
+
+.bottom-header{
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-side{
+    grid-column: 1 / 2;
+    display: flex;
+    gap: 10px;
+}
+
+.right-side{
+    grid-column: 2 / 3;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.logo > img{
+    width: 50px;
 }
 
 .sidebar{
