--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@
     align-items: center;
 }
 
-.logo > img{
+img{
     width: 50px;
 }
 
@@ -117,6 +117,50 @@ li div {
 
 .content{
     background-color: purple;
+}
+
+.nav > ul {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
+
+.your-projects{
+    display: flex;
+    justify-content: start;
+    padding: 30px 10px 10px 50px;
+}
+
+.trending-text{
+    display: flex;
+    justify-content: start;
+}
+
+.articles{
     grid-row: 2 / 4;
     grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 15px;
+    padding: 20px;
+}
+
+.projects, .announcements, .trending {
+    display: grid;
+    gap: 20px;
+}
+
+.projects{
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
+}
+
+.announcements{
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+
+.trending{
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
 }
